Introduced new api response struct
